// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`child element count 1`] = `
<div>
  <div
    class="nut-hoverbutton-container"
  >
    <div
      class="nut-hoverbutton"
    >
      <div
        class="nut-hoverbutton-item-container"
      >
        <div
          class="nut-hoverbutton-item-icon"
        >
          <svg
            aria-labelledby="Cart"
            class="nut-icon nut-icon-Cart nut-icon"
            role="presentation"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="nut-hoverbutton-item-container"
      >
        <div
          class="nut-hoverbutton-item-icon"
        >
          <svg
            aria-labelledby="Cart"
            class="nut-icon nut-icon-Cart nut-icon"
            role="presentation"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="nut-hoverbutton-item-container"
      >
        <div
          class="nut-hoverbutton-item-icon"
        >
          <svg
            aria-labelledby="Cart"
            class="nut-icon nut-icon-Cart nut-icon"
            role="presentation"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="nut-hoverbutton-item-container nut-hoverbutton-item-container-icontext"
      >
        <div
          class="nut-hoverbutton-item-text-icon"
        />
        <svg
          aria-labelledby="Cart"
          class="nut-icon nut-icon-Cart nut-icon"
          role="presentation"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <div
          class="nut-hoverbutton-item-text"
        >
          购物
        </div>
      </div>
    </div>
    <div
      class="nut-safe-area nut-safe-area-position-bottom"
    />
  </div>
</div>
`;

exports[`emit click event 1`] = `
<div>
  <div
    class="nut-hoverbutton-container"
  >
    <div
      class="nut-hoverbutton"
    >
      <div
        class="nut-hoverbutton-item-container"
      >
        <div
          class="nut-hoverbutton-item-icon"
        >
          <svg
            aria-labelledby="Cart"
            class="nut-icon nut-icon-Cart nut-icon"
            role="presentation"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="nut-safe-area nut-safe-area-position-bottom"
    />
  </div>
</div>
`;

exports[`tabbar height 1`] = `
<div>
  <div
    class="nut-hoverbutton-container"
    style="bottom: 108px;"
  >
    <div
      class="nut-hoverbutton"
    >
      <div
        class="nut-hoverbutton-item-container"
      >
        <div
          class="nut-hoverbutton-item-icon"
        >
          <svg
            aria-labelledby="Cart"
            class="nut-icon nut-icon-Cart nut-icon"
            role="presentation"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.279.629a1.5 1.5 0 0 1 2.092-.35 7.2 7.2 0 0 1 2.983 5.138L5.718 9H39.21a5.5 5.5 0 0 1 5.473 6.055L43.222 29.46A9.5 9.5 0 0 1 33.77 38H14.23a9.5 9.5 0 0 1-9.452-8.541L2.37 5.72A4.2 4.2 0 0 0 .63 2.721 1.5 1.5 0 0 1 .279.629M6.022 12l1.74 17.156A6.5 6.5 0 0 0 14.23 35h19.54a6.5 6.5 0 0 0 6.467-5.844l1.461-14.404A2.5 2.5 0 0 0 39.211 12zM12 43a3 3 0 1 1-6 0 3 3 0 0 1 6 0m24 0a3 3 0 1 0 6 0 3 3 0 0 0-6 0"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="nut-safe-area nut-safe-area-position-bottom"
    />
  </div>
</div>
`;
